tests/baselines/reference/namedFunctionExpressionCallErrors.errors.txt
==== tests/cases/compiler/namedFunctionExpressionCallErrors.ts (3 errors) ====
    var recurser = function foo() {
    };
    
    // Error: foo should not be visible here
    foo();
    ~~~
!!! error TS2095: Could not find symbol 'foo'.
    
    // recurser should be
    recurser();
    
    (function bar() {
        // Error: foo should not be visible here either
        foo();
        ~~~
!!! error TS2095: Could not find symbol 'foo'.
    });
    
    // Error: bar should not be visible
    bar();
    ~~~
!!! error TS2095: Could not find symbol 'bar'.